fix chess spacing, remove broken scroll buttons

--- a/stylesheets/chess.css
+++ b/stylesheets/chess.css
@@ -40,10 +40,7 @@
 
 #chess .log { display: none }
 
-#chess .board {
-  margin: 0 2rem 0;
-  float: left;
-}
+#chess .board { margin: 0 2rem 0 }
 
 #chess .square {
   width: 5rem;
